Rollback Spark changes in main